--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ pygments: true
 auto: true
 rdiscount:
   extensions: [smart]
-site:
-  gravatar: 123
-  ga: 
-  twitter: patslat4
-  title: Patrick Slattery
-  subtitle: derp
-  author: Patrick Slattery
+gravatar: b75a1cc9da0903833e791882bf9a7670
+ga: 
+twitter: patslat4
+title: Patrick Slattery
+subtitle: Software Engineer
+author: Patrick Slattery
+url: http://localhost:4000
